--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Sono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>PreSkool | School management system</title>
   </head>
   <body>
