Feat: Biulding studenst mates and schedules

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>PreSkool | School management system</title>
+    <title>PRESKOOL | School management system</title>
   </head>
   <body>
     <div id="root"></div>
